--- a/project/index.html
+++ b/project/index.html
@@ -20,19 +20,19 @@
                 <img src="./images/logo.png" alt="logo" />
               </a>
 
-              <ul class="header-top-menu">
-                <li class="header-menu-item">
-                  <a href="#" class="header-menu-link">Home</a>
+              <ul class="menu">
+                <li class="menu-item">
+                  <a href="#" class="menu-link">Home</a>
                 </li>
-                <li class="header-menu-item">
-                  <a href="#" class="header-menu-link">About us</a>
+                <li class="menu-item">
+                  <a href="#" class="menu-link">About us</a>
                 </li>
-                <li class="header-menu-item">
-                  <a href="#" class="header-menu-link">Our Services</a
+                <li class="menu-item">
+                  <a href="#" class="menu-link">Our Services</a
                   >
                 </li>
-                <li class="header-menu-item">
-                  <a href="#" class="header-menu-link">Support</a>
+                <li class="menu-item">
+                  <a href="#" class="menu-link">Support</a>
                 </li>
               </ul>
             <div class="header-top-contact">
@@ -58,7 +58,7 @@
         </div>
       </header>
       <section class="about">
-        <!-- <div class="container"> -->
+        <div class="container container--flex">
           <img src="./images/img5.png" alt="img5" class="about-image" />
           <div class="about-content">
             <img src="./images/img6.png" class="about-content-image" alt="img6" />
@@ -75,10 +75,11 @@
             </p>
             <a class="button button--orange"> Learn more </a>
           </div>
-        <!-- </div> -->
+        </div>
       </section>
       <section class="services">
         <img src="./images/img12.png" alt="img12" class="services-image">
+        <div class="container container--flex">
           <div class="services-left">
             <h3 class="title">OUR SERVICES</h3>
             <h2 class="heading">
@@ -143,11 +144,12 @@
               </p>
             </div>
           </div>
+        </div>
       </section>
       <section class="testi">
         <img src="./images/img20.png" alt="img20" class="testi-image">
         <h3 class="testi-title">TESTIMONIALS</h3>
-        <h2 class="testi-heading">What people say</h2>
+        <h2 class="heading">What people say</h2>
         <div class="testi-content">
           <!-- <div class="mark1"></div>
           <div class="mark2"></div> -->
@@ -155,9 +157,9 @@
           <img src="./images/img4.png" alt="img4" class="image-right">
           <div class="testi-detail">
 
-            <p class="testi-content-detail">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
+            <p class="text">This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.
             </p>
-            <h4 class="testi-content-heading">Zoltan Nemeth</h4>
+            <a href="" class="testi-author">Zoltan Nemeth</a>
             <div class="testi-content-star">
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
@@ -175,11 +177,11 @@
       <section class="form">
         <div class="form-left">
           <img src="./images/img16.png" alt="img16">
-          <h3 class="form-title">Contact us</h3>
-          <h2 class="form-heading">Don’t Hesitate to
+          <h3 class="title">Contact us</h3>
+          <h2 class="heading">Don’t Hesitate to
             Contact us for
             any Information.</h2>
-          <p class="form-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore
             magna aliqua. Ut enim ad minim veniam,.</p>
         </div>
@@ -205,26 +207,42 @@
           <a href="#" class="footer-logo">
             <img src="./images/logo.png" alt="logo" />
           </a>
-          <ul class="footer-menu">
-            <li class="footer-menu-item">
-              <a href="#" class="footer-menu-link">Home</a>
+          <ul class="menu">
+            <li class="menu-item">
+              <a href="#" class="menu-link">Home</a>
             </li>
-            <li class="footer-menu-item">
-              <a href="#" class="footer-menu-link">About us</a>
+            <li class="menu-item">
+              <a href="#" class="menu-link">About us</a>
             </li>
-            <li class="footer-menu-item">
-              <a href="#" class="footer-menu-link">Our Services</a>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Our Services</a>
             </li>
-            <li class="footer-menu-item">
-              <a href="#" class="footer-menu-link">Support</a>
+            <li class="menu-item">
+              <a href="#" class="menu-link">Support</a>
             </li>
           </ul>
-          <div class="footer-social">
-              <i class="fab fa-facebook-f"></i>
-              <i class="fab fa-youtube"></i>
-              <i class="fab fa-twitter"></i>
-              <i class="fab fa-linkedin"></i>
-          </div>
+          <ul class="social">
+            <li class="social-item">
+              <a href="" class="social-link">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <i class="fab fa-youtube"></i>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="social-link">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+          </ul>
         </div>
         <div class="footer-bottom">
           <p>
